--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://RohithGangarapu.github.io/instagram-react-realdatabase-firebase",
+  "homepage": "https://RohithGangarapu.github.io/insta",
   "name": "sample",
   "version": "0.1.0",
   "private": true,
@@ -11,6 +11,7 @@
     "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
